--- a/src/Components/BlogsHero/Bloghero.css
+++ b/src/Components/BlogsHero/Bloghero.css
@@ -4,8 +4,6 @@
   align-items: center;
   text-align: center;
   flex-direction: column;
-  height: 130svh;
-
 
   .key,
   .blog_title {
@@ -13,42 +11,48 @@
   }
 
   .key {
-    font-size: 22px;
+    font-size: 1.3rem;
     padding: 8% 0px 1.2% 0px;
   }
 
   .blog_title {
-    font-size: 50px;
+    font-size: 3rem;
     font-weight: 300;
     padding-bottom: 3%;
   }
 
   .hero_blog_wripper {
     width: 90%;
-    height: 70vh;
+    padding: 2% 0px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap-reverse;
     gap: 40px;
+    margin-bottom: 3%;
 
     .hero_blog_content {
-      width: 45%;
-      height: 60vh;
+      width: 550px;
       border-radius: 30px;
       text-align: start;
       overflow: hidden;
 
-      img {
+      .img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
     }
 
+    .hero_blog_content_one {
+      height: 60vh;
+    }
+
     .hero_blog_content2 {
       display: flex;
       justify-content: center;
       flex-direction: column;
+      padding: 4% 0px;
     }
 
     .date {
@@ -58,39 +62,62 @@
       span {
         opacity: 0.6;
         padding-left: 10px;
+        color: #0a2640;
       }
     }
 
     .title {
-        font-size: 45px;
-        font-weight: 300;
-        padding-bottom: 3%;
+      font-size: 45px;
+      font-weight: 300;
+      padding-bottom: 3%;
+      color: #0a2640;
     }
 
     .blogger_wripper {
-        height: 10vh;
-        display: flex;
-        align-items: center;
+      height: 10vh;
+      display: flex;
+      align-items: center;
 
-        .img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50px;
-            overflow: hidden;
+      .img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50px;
+        overflow: hidden;
 
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
+      }
 
-        .name {
-            opacity: 0.6;
-            font-size: 19px;
-            padding-left: 12px;
-        }
+      .name {
+        opacity: 0.6;
+        font-size: 19px;
+        padding-left: 12px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .hero_blog {
+      padding-top: 35%;
+    }
+    .hero_blog .blog_title {
+      font-size: 2.8rem;
+      padding: 3% 0px 6% 0px;
+    }
+    .hero_blog_wripper .hero_blog_content_one {
+      height: 50vh;
+    }
+    .hero_blog_content2 .title {
+      font-size: 2.5rem;
     }
   }
 }
 
+@media screen and (max-width: 767px) {
+  .hero_blog {
+    padding-top: 35%;
+  }
+}
