--- a/src/Components/Enterprice/EnterpriceStart.css
+++ b/src/Components/Enterprice/EnterpriceStart.css
@@ -9,27 +9,64 @@
 
   .start_wripper {
     width: 88%;
-    height: 60vh;
     background: var(--primary_Clr);
     border-radius: 10px;
     margin: auto;
     text-align: center;
 
     .title {
-        font-size: 45px;
-        color: #fff;
-        padding: 5% 0px;
+      font-size: 2.4rem;
+      color: #fff;
+      padding: 5% 20%;
+    }
+
+    .form {
+      padding-bottom: 4rem;
     }
 
     #input {
-        width: 44%;
-        height: 10vh;
-        border-radius: 50px;
-        outline: none;
-        padding: 20px;
-        font-size: 20px;
-        color: var(--primary_Clr);
-        margin-right: 30px;
+      width: 44%;
+      height: 10vh;
+      border-radius: 3.1rem;
+      outline: none;
+      padding: 20px;
+      font-size: 20px;
+      color: var(--primary_Clr);
+      margin-right: 30px;
+    }
+
+    #submit {
+      outline: none;
+      cursor: pointer;
+      border: none;
+      padding: 1rem 3rem;
+      display: inline-block;
+      letter-spacing: 0.05rem;
+      font-weight: 700;
+      font-size: 1.3rem;
+      border-radius: 500px;
+      overflow: hidden;
+      background: var(--btn_Clr);
+      color: ghostwhite;
+    }
+
+    #submit:hover {
+      opacity: 0.7;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .start_wripper {
+      width: 95%;
+      padding: 4% 3%;
+    }
+    .start_wripper .title {
+      font-size: 1.7rem;
+      padding: 0px 2% 8% 2%;
+    }
+    .form #input {
+      width: 95%;
+      margin-bottom: 15px;
     }
   }
 }
