--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,51 +1,68 @@
 :root {
-    --primary_Clr: #0a2640;
-    --round_bg: #1c3d5b;
-    --btn_Clr: #65e4a3;
+  --primary_Clr: #0a2640;
+  --round_bg: #1c3d5b;
+  --btn_Clr: #65e4a3;
 }
-
 
 .hero {
-    padding: 14% 0px 10% 0px;
-    background: var(--primary_Clr);
-
+  padding: 14% 0px 10% 0px;
+  background: var(--primary_Clr);
 }
-
 
 .hero_wripper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 70px;
-
-
-    .hero_content {
-        width: 45%;
-        height: 66vh;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        overflow: hidden;
-
-        .hero_title,
-        .hero_description {
-            color: #fff;
-        }
-
-        .hero_title {
-            font-size: 45px;  
-            font-weight: 400;  
-            padding-bottom: 3%;
-        }
-
-        .hero_description {
-            font-size: 19px;
-            padding-bottom: 5%;
-        }
-    }
-
-    .hero_content2 {
-        width: 38%;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 60px;
 }
 
+.hero_content {
+  width: 35.625rem;
+}
+
+.hero_content1 {
+  padding: 3%;
+}
+
+.hero_content .hero_title,
+.hero_description {
+  color: #fff;
+}
+
+.hero_title {
+  font-size: 2.82rem;
+  font-weight: 400;
+  padding-bottom: 4%;
+}
+
+.hero_content .hero_description {
+  font-size: 1.2rem;
+  padding-bottom: 5%;
+}
+
+.hero_content2 {
+  width: 30rem;
+  height: 63vh;
+  overflow: hidden;
+}
+
+.hero_content2 .img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .hero {
+    padding: 35% 2% 10% 2%;
+  }
+  .hero_wripper {
+    gap: 35px;
+  }
+  .hero_title {
+    font-size: 2.2rem;
+  }
+  .hero_description {
+    font-size: 1rem;
+  }
+}
