--- a/src/Components/OurStory/OurStory.css
+++ b/src/Components/OurStory/OurStory.css
@@ -1,72 +1,86 @@
 .galary {
-    padding: 30px 10px;
-    /* position: relative;
-    top: 80%; */
+  padding: 30px 10px;
 }
 
 .galary_wripper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
 
-    .galary_content {
-        width: 27%;
-        height: 110vh;
-        border-radius: 30px;
-        overflow: hidden;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-  
-}
-
-.image_card {
-    height: 52vh;
+  .galary_content {
+    width: 21.875rem;
+    padding: 1% 0px;
     border-radius: 30px;
     overflow: hidden;
 
     img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+  }
+}
+
+.image_card {
+  height: 52vh;
+  border-radius: 30px;
+  overflow: hidden;
+
+  .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .content_one {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    row-gap: 40px;
-
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 40px;
 }
 
-
-
 .our_story_wripper {
- width: 80%;    
- margin: 5% auto;
- padding: 10px;
+  width: 80%;
+  margin: 5% auto;
+  padding: 10px;
 
-    .key_title {
-        font-size: 19px;
-        opacity: 0.6;
-        padding-bottom: 2%;
-    }
+  .key_title {
+    font-size: 1.2rem;
+    opacity: 0.6;
+    padding-bottom: 2%;
+  }
 
-    .title {
-        font-size: 45px;
-        padding-bottom: 2%;
-        font-weight: 300;
-    }
+  .title {
+    font-size: 2.3rem;
+    padding: 0px 30% 2% 0px;
+    font-weight: 300;
+  }
 
-    .description {
-        font-size: 20px;
-        opacity: 0.6;
-    }
+  .description {
+    font-size: 1.1rem;
+    opacity: 0.6;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .galary {
+    padding: 50px 3px;
+  }
+  .galary_wripper .long-img {
+    display: none;
+  }
+  .galary_wripper .display-none-small {
+    display: none;
+  }
+  .our_story_wripper {
+    padding-top: 20%;
+    width: 95%;
+  }
+  .our_story_wripper .title {
+    font-size: 1.9rem;
+    padding: 3% 0px 8% 0px;
+  }
 }
