--- a/src/Components/Services/ServiceInitialCard.css
+++ b/src/Components/Services/ServiceInitialCard.css
@@ -1,77 +1,80 @@
 :root {
-    --primary_Clr: #0a2640;
-    --round_bg: #1c3d5b;
-    --btn_Clr: #65e4a3;
+  --primary_Clr: #0a2640;
+  --round_bg: #1c3d5b;
+  --btn_Clr: #65e4a3;
 }
 
 .service_card_wripper {
-    width: 26%;
-    height: 88vh;
-    border-radius: 20px;
+  width: 320px;
+  border-radius: 1.25rem;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+
+  .card_head {
+    height: 62vh;
+    border-radius: 1.25rem;
     overflow: hidden;
-    transition: .5s ease-in-out;
 
+    img {
+      width: 100%;
+      height: 100%;
+      transition: 0.5s ease-in-out;
+    }
+  }
+  .card_body {
+    text-align: start;
+    padding-bottom: 1rem;
+
+    .body_title {
+      padding: 4% 0px 1% 0px;
+      font-size: 1.35rem;
+    }
+
+    .body_description {
+      font-size: 1rem;
+      padding: 1% 0px 3% 0px;
+      opacity: 0.7;
+      color: var(--round_bg);
+    }
+
+    .link {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      border-bottom: 2px solid #000;
+      width: 50%;
+      padding: 0px 0px 2% 0px;
+
+      .explore,
+      .arrow {
+        color: var(--primary_Clr);
+        font-weight: 700;
+      }
+
+      a {
+        font-size: 20px;
+        text-decoration: none;
+      }
+
+      .arrow {
+        font-size: 30px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 767px) {
     .card_head {
-        height: 62vh;
-        border-radius: 20px;
-        overflow: hidden;
+      height: 55vh;
+    }
 
+    .service_card_wripper:hover {
+      transform: rotate(0deg);
+
+      .card_head {
         img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: .5s ease-in-out;
+          transform: scale(1.2);
         }
+      }
     }
-    .card_body {
-        text-align: start;
-
-     .body_title {
-        padding: 4% 0px 1% 0px;
-     }   
-
-     .body_description {
-        font-size: 18.5px;
-        padding: 1% 0px 3% 0px;
-        opacity: .7;
-        color: var(--round_bg);
-     }
-
-     .link {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        border-bottom: 2px solid #000;
-        width: 50%;
-        padding: 0px 0px 2% 0px;
-
-        a,
-        .arrow {
-            color: var(--primary_Clr);
-            font-weight: 700;
-        }
-
-        a {
-            font-size: 20px;
-            text-decoration: none;
-         }
-    
-         .arrow {
-            font-size: 30px;
-         }
-
-     }
-
-     
-    }
-}
-
-.service_card_wripper:hover {
-    transform: rotate(8deg);
-
-    .card_head {
-       img {
-        transform: scale(1.2);
-       }
-    }
+  }
 }
