--- a/src/Components/AboutHero/AboutHero.css
+++ b/src/Components/AboutHero/AboutHero.css
@@ -1,32 +1,44 @@
 :root {
-    --primary_Clr: #0a2640;
-    --round_bg: #1c3d5b;
-    --btn_Clr: #65e4a3;
+  --primary_Clr: #0a2640;
+  --round_bg: #1c3d5b;
+  --btn_Clr: #65e4a3;
 }
 
 .abouthero_wripper {
-    background: var(--primary_Clr);
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #fff;
-    text-align: center;
+  background: var(--primary_Clr);
+  padding: 10% 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #fff;
+  text-align: center;
 
-    .main_title {
-        font-size: 19px;
-        padding-bottom: 2.5%;
-    }
+  .main_title {
+    font-size: 1.18rem;
+    padding-bottom: 2.5%;
+  }
 
-    .title {
-        font-size: 45px;
-        padding-bottom: 2%;
-    }
+  .title {
+    font-size: 2.8rem;
+    padding: 2% 20% 2% 25%;
+  }
 
-    .description {
-        font-size: 19px;
-    }
+  .description {
+    font-size: 1.3rem;
+    padding: 0px 20%;
+  }
 }
 
-
+@media screen and (max-width: 767px) {
+  .abouthero_wripper {
+    padding: 35% 3% 15% 3%;
+  }
+  .abouthero_wripper .title {
+    font-size: 2rem;
+    padding: 5% 0px 8% 0px;
+  }
+  .abouthero_wripper .description {
+    padding: 0px;
+  }
+}
