--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -1,87 +1,95 @@
 .blog {
-    text-align: center;
-    padding: 8% 5% 5% 5%;
+  text-align: center;
+  padding: 8% 5% 5% 5%;
 
-    .main_title {
-        font-size: 19px;
-        opacity: 0.6;
-        padding-bottom: 2%;
-    }
+  .main_title {
+    font-size: 1.2rem;
+    opacity: 0.6;
+    padding-bottom: 2%;
+  }
 
-    .title {
-        font-size: 40px;
-        font-weight: 300;
-        padding-bottom: 5%;
-    }
+  .title {
+    font-size: 2.2rem;
+    font-weight: 300;
+    padding-bottom: 5%;
+    color: #0a2640;
+  }
 }
-
 
 .blogs_wripper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 60px;
 }
 
-
 .blog_wripper {
-    width: 28%;
-    height: 70vh;
-    border-radius: 30px;
-    overflow: hidden;
+  width: 18rem;
+  border-radius: 1.875rem;
+  overflow: hidden;
 
+  .head {
+    height: 40vh;
+    border-radius: 1.875rem;
 
-    .head {
-        height: 40vh;
-        border-radius: 30px;
+    .img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 
-        img {
-            width: 100%;
-            height: 100%;
-        }
+  .body {
+    text-align: start;
+
+    .category {
+      font-size: 1.03rem;
+      font-weight: 600;
+      padding: 3% 0px;
+
+      .date {
+        opacity: 0.4;
+        padding-left: 10px;
+      }
     }
 
-    .body {
-        text-align: start;
+    .description {
+      font-size: 1.2rem;
+      padding-bottom: 4%;
+    }
+  }
 
-        .category {
-            font-size: 17px;
-            font-weight: 600;
-            padding: 3% 0px;
+  .bloger {
+    height: 10vh;
+    display: flex;
+    align-items: center;
 
-            .date {
-                opacity: .4;
-                padding-left: 10px;
-            }
-        }
+    .img {
+      width: 2.5rem;
+      height: 2.5rem;
+      border-radius: 3.125rem;
+      overflow: hidden;
 
-        .description {
-            font-size: 20px;
-            padding-bottom: 4%;
-        }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
 
-    .bloger {
-        height: 10vh;
-        display: flex;
-        align-items: center;
-
-        .img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50px;
-            overflow: hidden;
-
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-
-        .name {
-            padding-left: 14px;
-            font-size: 18px;
-        }
+    .name {
+      padding-left: 14px;
+      font-size: 1.125rem;
     }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .blog {
+    padding: 16% 2%;
+  }
+  .blog .title {
+    font-size: 1.8rem;
+    padding: 3% 0px 15% 0px;
+  }
 }
