--- a/src/Components/Enterprice/Enterpeics.css
+++ b/src/Components/Enterprice/Enterpeics.css
@@ -9,7 +9,7 @@
   background: var(--primary_Clr);
 
   .title {
-    font-size: 40px;
+    font-size: 2.2rem;
     color: #fff;
     padding-bottom: 5%;
   }
@@ -18,24 +18,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 40px;
   }
 }
 
 .card_wripper {
-  width: 33%;
-  height: 54vh;
+  width: 300px;
   background: #fff;
   border-radius: 10px;
   padding: 30px;
   cursor: progress;
-  transition: .5s ease-out;
+  transition: 0.5s ease-out;
 
   .description {
-    font-size: 25px;
+    font-size: 1.3rem;
 
     .quote {
-      font-size: 22px;
+      font-size: 1.37;
     }
   }
 
@@ -46,8 +46,8 @@
     margin-top: 10%;
 
     .img {
-      width: 70px;
-      height: 70px;
+      width: 60px;
+      height: 60px;
       border-radius: 50px;
       overflow: hidden;
 
@@ -62,7 +62,7 @@
       margin-left: 13px;
 
       .name {
-        font-size: 20px;
+        font-size: 1.25rem;
         color: #0a2640;
         font-weight: 500;
         padding-bottom: 7px;
@@ -75,7 +75,16 @@
   }
 }
 
-
 .card_wripper:hover {
-    transform: scale(1.1);
+  transform: scale(1.06);
+}
+
+@media screen and (max-width: 767px) {
+  .enterprice {
+    padding: 10% 6%;
+  }
+  .enterprice .title {
+    font-size: 2rem;
+    padding-bottom: 15%;
+  }
 }
