--- a/src/Components/Navigation/Navbar.css
+++ b/src/Components/Navigation/Navbar.css
@@ -1,110 +1,153 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap");
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --primary_Clr: #0a2640;
-    --round_bg: #1c3d5b;
-    --btn_Clr: #65e4a3;
+  --primary_Clr: #0a2640;
+  --round_bg: #1c3d5b;
+  --btn_Clr: #65e4a3;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    line-height: 1.3;
-    font-weight: 400;
-    position: relative;
+  font-family: "Lato", sans-serif;
+  line-height: 1.3;
+  font-weight: 400;
+  /* position: relative; */
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2% 6%;
-    position: fixed;
-    top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2% 6%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: 2;
+  background: linear-gradient(to top, hsl(209, 74%, 15%), hsl(209, 75%, 22%));
+}
+
+.logo {
+  width: 10rem;
+  height: 6vh;
+  overflow: hidden;
+
+  .img {
     width: 100%;
-    overflow: hidden;
-    z-index: 2;
-    background: linear-gradient(
-        to top,
-        hsl(209, 74%, 15% ),
-        hsl(209, 75%, 22%)
-    );
-   
-
-    .logo {
-        width: 13%;
-        height: 6vh;
-        overflow: hidden;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
+    height: 100%;
+  }
 }
 
 .nav_links {
-    flex: 1;
-    text-align: end;
-
-    ul li {
-        list-style-type: none;
-        display: inline-block;
-        padding: 0px 20px;
-
-        a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 18px;
-        }
-    }
-
-    ul li::before {
-        margin-left: auto;
-    }
-
-    ul li::after,
-    ul li::before {
-        content: '';
-        width: 0%;
-        height: 2px;
-        background: var(--btn_Clr);
-        display: block;
-        transition: 0.5s;
-    }
-
-    ul li:hover::before,
-    ul li:hover::after {
-        width: 100%;
-    }
-
-    .nav_btn {
-        padding: 8px 20px;
-        border: 2px solid transparent;
-        border-radius: 50px;
-        background: #ffff;
-        font-size: 18px;
-        font-weight: 500;
-        transition: ease-in-out .5s;
-        cursor: progress;
-    }
-
-    .nav_btn:hover {
-        color: white;
-        box-shadow: inset 0 -100px 0 0 var(--btn_Clr);
-    }
-
-    .nav_btn:active {
-        transform: scale(0.9);
-    }   
+  flex: 1;
+  text-align: end;
 }
 
+.nav_links ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0px 20px;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+}
+
+.nav_links ul li::before {
+  margin-left: auto;
+}
+
+.nav_links ul li::after,
+ul li::before {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: var(--btn_Clr);
+  display: block;
+  transition: 0.5s;
+}
+
+.nav_links ul li:hover::before,
+ul li:hover::after {
+  width: 100%;
+}
+
+.nav_btn {
+  padding: 8px 20px;
+  border: 2px solid transparent;
+  border-radius: 50px;
+  background: #ffff;
+  font-size: 18px;
+  font-weight: 500;
+  transition: ease-in-out 0.5s;
+  cursor: progress;
+}
+
+.nav_btn:hover {
+  color: white;
+  box-shadow: inset 0 -100px 0 0 var(--btn_Clr);
+}
+
+.nav_btn:active {
+  transform: scale(0.9);
+}
+
+.showMenu,
+.hideMenu {
+  font-size: 2rem;
+  color: red;
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  nav {
+    overflow: visible;
+  }
+  .nav_links {
+    position: absolute;
+    right: 30px;
+    top: -400px;
+    width: 320px;
+    margin: auto;
+    height: 43vh;
+    background: #fff;
+    text-align: center;
+    border-radius: 20px;
+    padding: 5% 0px;
+    overflow: hidden;
+  }
+  .nav_links ul li {
+    display: block;
+    padding: 3% 0px;
+  }
+  .nav_links ul li a {
+    font-size: 1.7rem;
+    color: var(--primary_Clr);
+  }
+  .nav_btn {
+    background: var(--primary_Clr);
+    color: #fff;
+    padding: 10px 25px;
+    margin-top: 4%;
+  }
+  .showMenu,
+  .hideMenu {
+    font-size: 2.5rem;
+    color: #fff;
+    display: block;
+  }
+  .hideMenu {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: var(--primary_Clr);
+  }
+}
