--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,24 +1,35 @@
 .services {
-    text-align: center;
-    padding: 5% 0px;
+  text-align: center;
+  padding: 5% 0px;
 
-    .main-title {
-        font-size: 19px;
-        opacity: .7;
-        text-transform: capitalize;
-        padding-bottom: 1.5%;
+  .main-title {
+    font-size: 1.2rem;
+    opacity: 0.7;
+    text-transform: capitalize;
+    padding-bottom: 1.5%;
+  }
+
+  .service_title {
+    font-size: 2.3rem;
+    font-weight: 400;
+    padding-bottom: 5%;
+  }
+
+  .services_primary_wripper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 70px;
+  }
+
+  @media screen and (max-width: 767px) {
+    .services {
+      padding: 0px 4%;
     }
-
     .service_title {
-        font-size: 40px;
-        font-weight: 400;
-        padding-bottom: 5%;
+      font-size: 1.8rem;
+      padding-bottom: 10%;
     }
-
-    .services_primary_wripper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 70px;
-    }
+  }
 }
