--- a/src/Components/Services/ServicesSecondary.css
+++ b/src/Components/Services/ServicesSecondary.css
@@ -12,16 +12,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 50px;
   font-weight: 300;
 
   .customer_content {
-    width: 35%;
-    height: 95vh;
+    width: 23.75rem;
     border-radius: 30px;
-    overflow: hidden;
 
-    img {
+    .img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -29,15 +28,16 @@
     }
 
     .customer_title {
-      font-size: 40px;
+      font-size: 2rem;
       font-weight: 400;
       line-height: 1.2;
-      padding-bottom: 5%;
+      padding-bottom: 3%;
+      color: var(--primary_Clr);
     }
 
     .customer_description {
       background: #fff;
-      padding: 20px 10px;
+      padding: 15px 10px;
       margin: 15px 0px;
       border: 2px solid transparent;
       border-radius: 5px;
@@ -48,18 +48,26 @@
       cursor: progress;
 
       .icon {
-        font-size: 35px;
+        font-size: 2.18rem;
+        color: var(--primary_Clr);
       }
 
-      span {
+      .detail {
         padding-left: 4%;
-        font-size: 26px;
+        font-size: 1.2rem;
+        color: var(--primary_Clr);
       }
     }
   }
 
   .content_two {
-    width: 50%;
+    width: 39.375rem;
     padding: 2%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .connect_customer {
+    padding: 15% 5% 5% 5%;
   }
 }
