--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -1,61 +1,72 @@
 .team {
-    padding: 6% ;
+  padding: 6%;
 
-    .key_title {
-        font-size: 18px;
-        padding-bottom: 2%;
-        opacity: 0.7;
-    }
+  .key_title {
+    font-size: 1.1rem;
+    padding-bottom: 2%;
+    opacity: 0.7;
+  }
 
+  .title {
+    font-size: 2.7rem;
+    padding-bottom: 2%;
+    font-weight: 300;
+  }
 
-    .title {
-        font-size: 45px;
-        padding-bottom: 2%;
-        font-weight: 300;
-    }
+  .description {
+    font-size: 1.1rem;
+    opacity: 0.7;
+    padding-bottom: 5%;
+  }
 
-
-    .description {
-        font-size: 19px;
-        opacity: 0.7;
-        padding-bottom: 5%;
-    }
-
-
-    .team_card_wripper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 70px;
-    }
+  .team_card_wripper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 70px;
+  }
 }
 
 .team_card {
-    width: 26%;
-    height: 75vh;
-    text-align: center;
+  width: 20rem;
+  text-align: center;
 
-    .head {
-        height: 60vh;
-        border-radius: 30px;
-        margin-bottom: 4%;
-        overflow: hidden;
+  .head {
+    height: 60vh;
+    border-radius: 30px;
+    margin-bottom: 3%;
+    overflow: hidden;
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+  }
 
-    .name {
-        font-size: 23px;
-        font-weight: 500;
-        padding-bottom: 2%;
-    }
+  .name {
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-bottom: 2%;
+  }
 
-    .position {
-        opacity: 0.7;
-        font-size: 19px;
-    }
+  .position {
+    opacity: 0.7;
+    font-size: 1.1rem;
+    padding-bottom: 2%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team .title {
+    font-size: 2.4rem;
+    padding: 3% 0px 5% 0px;
+  }
+  .team .description {
+    padding-bottom: 10%;
+  }
+  .team_card .head {
+    margin-bottom: 1%;
+  }
 }
