--- a/src/Layout/Navigation/Navbar.module.css
+++ b/src/Layout/Navigation/Navbar.module.css
@@ -18,7 +18,7 @@ body {
   font-family: "Lato", sans-serif;
   line-height: 1.3;
   font-weight: 400;
-  /* position: relative; */
+  position: relative;
 }
 
 nav {
@@ -103,7 +103,6 @@ ul li:hover::after {
 .showMenu,
 .hideMenu {
   font-size: 2rem;
-  color: red;
   display: none;
 }
 
