--- a/src/Layout/Navigation/Navbar.module.css
+++ b/src/Layout/Navigation/Navbar.module.css
@@ -1,24 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap");
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 :root {
   --primary_Clr: #0a2640;
   --round_bg: #1c3d5b;
   --btn_Clr: #65e4a3;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  line-height: 1.3;
-  font-weight: 400;
-  position: relative;
 }
 
 nav {
@@ -35,8 +19,8 @@ nav {
 }
 
 .logo {
-  width: 10rem;
-  height: 6vh;
+  width: 6rem;
+  height: 4vh;
   overflow: hidden;
 
   .img {
@@ -53,8 +37,13 @@ nav {
 .nav_links ul li {
   list-style-type: none;
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0px 35px;
 }
+
+.nav_links ul li a:focus {
+  color: var(--btn_Clr);
+}
+
 a {
   text-decoration: none;
   color: #fff;
