Made some changes in the Constant Data Component and  Blog component by reduction some code using the method of mapping

--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -16,6 +16,7 @@
   }
 }
 
+/*! Blog Card Styles  */
 .blogs_wripper {
   display: flex;
   justify-content: center;
@@ -28,6 +29,7 @@
   width: 18rem;
   border-radius: 1.875rem;
   overflow: hidden;
+  cursor: pointer;
 
   .head {
     height: 40vh;
