--- a/src/Layout/Navigation/Navbar.module.css
+++ b/src/Layout/Navigation/Navbar.module.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap");
 :root {
   --primary_Clr: #0a2640;
   --round_bg: #1c3d5b;
@@ -13,7 +12,6 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  overflow: hidden;
   z-index: 2;
   background: linear-gradient(to top, hsl(209, 74%, 15%), hsl(209, 75%, 22%));
 }
@@ -93,24 +91,25 @@ ul li:hover::after {
 .hideMenu {
   font-size: 2rem;
   display: none;
+  background: red;
 }
 
 @media screen and (max-width: 767px) {
   nav {
-    overflow: visible;
+    /* overflow: hidden; */
+    width: 100%;
   }
   .nav_links {
     position: absolute;
-    right: 30px;
+    left: 16px;
     top: -400px;
     width: 320px;
-    margin: auto;
     height: 43vh;
     background: #fff;
     text-align: center;
     border-radius: 20px;
     padding: 5% 0px;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   .nav_links ul li {
     display: block;
