Made some modification in the services.jsx ServicesCard.jsx Team.jsx and TeamCard.jsx components

--- a/src/Components/ServicesCard/ServiceCard.css
+++ b/src/Components/ServicesCard/ServiceCard.css
@@ -9,6 +9,7 @@
   border-radius: 1.25rem;
   overflow: hidden;
   transition: 0.5s ease-in-out;
+  cursor: pointer;
 
   .card_head {
     height: 62vh;
