--- a/src/Layout/Footer/Footer.module.css
+++ b/src/Layout/Footer/Footer.module.css
@@ -50,7 +50,7 @@
       font-size: 19px;
       padding: 5% 0px;
 
-      .a {
+      .lin {
         text-decoration: none;
         color: #000;
         opacity: 0.5;
