--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,99 +1,101 @@
-.login {
+.wripper {
   background: #0a2640;
   padding: 10% 0px 5% 0px;
+}
 
-  .login_wripper {
-    width: 75%;
-    border-radius: 40px;
-    margin: auto;
-    overflow: hidden;
-  }
+.login_wripper {
+  width: 75%;
+  border-radius: 40px;
+  margin: auto;
+  overflow: hidden;
+}
 
-  .form_wripper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+.form_main_wripper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-    .img,
-    .form {
-      height: 80vh;
-      width: 33.75rem;
-      overflow: hidden;
+.image_wripper,
+.form_wripper {
+  height: 75vh;
+  width: 33.75rem;
+  overflow: hidden;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    .form {
-      width: 420px;
-      padding: 10% 30px;
-      position: relative;
-      background: #fff;
-
-      .title {
-        text-align: center;
-        font-size: 1.8rem;
-        font-weight: 350;
-        padding-bottom: 12%;
-        color: #0a2640;
-      }
-
-      .input_wripper {
-        height: 8vh;
-        display: flex;
-        align-items: center;
-        column-gap: 10px;
-        border-bottom: 2px solid #0a2640;
-        margin-bottom: 8%;
-
-        .input {
-          height: 100%;
-          width: 86%;
-          outline: none;
-          border: 2px solid transparent;
-          font-size: 18px;
-          background: transparent;
-          padding-left: 20px;
-        }
-
-        .icon {
-          color: #0a2640;
-          font-size: 22px;
-        }
-      }
-
-      #submit {
-        padding: 10px 50px;
-        font-size: 20px;
-        border-radius: 50px;
-        border: 2px solid transparent;
-        cursor: progress;
-        transition: 0.5s ease-out;
-        margin-left: 25%;
-        color: #fff;
-        background: #0a2640;
-      }
-
-      #submit:hover {
-        border: 2px solid #0a2640;
-        background: transparent;
-        color: #0a2640;
-      }
-
-      .create_account {
-        display: inline-block;
-        text-decoration: none;
-        font-size: 19px;
-        color: #0a2640;
-        padding: 30px 0px 0px 30%;
-      }
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
+
+.form_wripper {
+  width: 420px;
+  padding: 10% 30px;
+  position: relative;
+  background: #fff;
+
+  .title {
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 350;
+    padding-bottom: 12%;
+    color: #0a2640;
+  }
+}
+
+.input_wripper {
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  border-bottom: 2px solid #0a2640;
+  margin-bottom: 8%;
+
+  .input {
+    height: 100%;
+    width: 86%;
+    outline: none;
+    border: 2px solid transparent;
+    font-size: 18px;
+    background: transparent;
+    padding-left: 10px;
+  }
+
+  .icon {
+    color: #0a2640;
+    font-size: 22px;
+  }
+}
+
+#submit {
+  padding: 10px 50px;
+  font-size: 20px;
+  border-radius: 50px;
+  border: 2px solid transparent;
+  cursor: progress;
+  transition: 0.5s ease-out;
+  margin-left: 27%;
+  color: #fff;
+  background: #0a2640;
+}
+
+#submit:hover {
+  border: 2px solid #0a2640;
+  background: transparent;
+  color: #0a2640;
+}
+
+.create_account {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 19px;
+  color: #0a2640;
+  padding: 30px 0px 0px 30%;
+}
+
+/*! This style is for the welcome that float on the left over the login form  */
 
 .welcome_back {
   width: 50%;
@@ -114,5 +116,18 @@
   }
 }
 
+/*! Media query for responsive design  */
+
 @media screen and (max-width: 767px) {
+  .login_wripper {
+    width: 95%;
+    margin-top: 4rem;
+  }
+  .image_wripper {
+    height: 45vh;
+    /* display: none; */
+  }
+  .form_wripper {
+    height: fit-content;
+  }
 }
