Make some changes in the login component on the login form by making the responsive design more userfriendly

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -123,11 +123,17 @@
     width: 95%;
     margin-top: 4rem;
   }
+  .title {
+    padding-top: 12%;
+  }
   .image_wripper {
     height: 45vh;
     /* display: none; */
   }
   .form_wripper {
     height: fit-content;
+  }
+  .welcome_back {
+    top: 0;
   }
 }
